style: card fix over collapse

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -11,7 +11,7 @@
     transition: opacity 0.3s ease, left 0.3s ease;
     }
     .header h1::after {
-        content: "> See More";
+        content: ">";
         width: 128px;
         padding-left: 32px;
         font-size: 16px;
@@ -30,7 +30,7 @@
         opacity: 1;
         right: var(--hover-heading-width); /* Y */
     }
-    /* .main:hover .header h1::after {
+    .main:hover .header h1::after {
         content: ">";
         width: 128px;
         padding-left: 42px;
@@ -44,7 +44,6 @@
     }
     
     .main .header h1::after {
-        content: ">";
         width: 128px;
         padding-left: 40px;
         font-size: 16px;
@@ -54,7 +53,7 @@
         top: 0;
         opacity: 1;
         transition: opacity 0.3s ease, right 0.3s ease;
-    } */
+    }
     
 
     .list .item{
@@ -69,7 +68,7 @@
     }
     .list .item:hover{
         overflow-y: visible;
-        transform: perspective(1000px) translateZ(40px) translateY(-38px);
+        transform: perspective(1000px) translateZ(52px) translateY(-24px);
         transition-delay: .12s;
     }
     
@@ -91,11 +90,16 @@
         z-index: 102;
         transition: .4s;
         height: 400px;
-        border-radius: 8px;
+        border-radius: 16px;
         transition-delay: .12s;
         max-height: 600px;
     }
     
+    .list .item:hover img{
+        transition: .4s;
+        border-radius: 16px 16px 0 0 ;
+        transition-delay: .12s;
+    }
     .list .item .box p {       
         z-index: 102;
         opacity: 0;
